Finished implementation of google event redirect
